plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
}

group 'com.drsanches.photobooth'
version '1.0'

sourceCompatibility = JavaVersion.VERSION_17

bootJar {
    archiveFileName = "photobooth-${archiveVersion.get()}.${archiveExtension.get()}"
}

task stage() {
    dependsOn 'clean'
    dependsOn 'build'
    tasks.findByName('build').mustRunAfter 'clean'
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
}

configurations {
    configureEach {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging' //For spring-boot-starter-log4j2
    }
}

dependencies {
    //Application
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '3.1.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '3.1.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.1.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.1.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.1.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.1.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '3.1.2'

    //DB
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
    implementation group: 'com.h2database', name: 'h2', version: '2.2.220' //For H2-console

    //Lombok
    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.28'

    //Other
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.2.0' //Swagger
    implementation group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.18' //For log4j2-spring.xml script
    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2' //Fixes build warnings of @Nullable

    //Tests
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.10.0'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.4.0'
    testImplementation group: 'org.springframework', name: 'spring-test', version: '6.0.11' //ReflectionTestUtils
}
